# simple-ecs

./: .clang-format  CHANGELOG  CMakeLists.txt  README.md
include/: simple_ecs.hpp
tests/: test_simple_ecs.cpp
